Update go.yml add name

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -8,8 +8,9 @@ on:
     branches: [ "main", "dev" ]
 
 jobs:
-
   build:
+    name: Go CI
+    
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
