--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -4,24 +4,24 @@
 name: Go
 
 on:
-  pull_request:
-    branches: [ "main", "dev" ]
+    pull_request:
+        branches: ["main", "dev"]
 
 jobs:
-  build:
-    name: Go CI
-    
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v4
+    build:
+        name: Go CI
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.22.x'
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
 
-    - name: Build
-      run: go build -v ./...
+            - name: Set up Go
+              uses: actions/setup-go@v4
+              with:
+                  go-version: "1.22.x"
 
-    - name: Test
-      run: go test -v ./...
+            - name: Build
+              run: go build -v ./...
+
+            - name: Test
+              run: go test -v ./...
